# ml-engineering

./: .gitignore  README.md
.github/workflows/: ci-defect-qc.yml  ci-pedestrian-box.yml  ci.yml
defect-qc/: README.md  pyproject.toml  requirements.txt
defect-qc/configs/: config.yaml
defect-qc/src/: data.py  train.py
defect-qc/src/defect_qc/: data_analysis.ipynb  eval.py  models.py  train.py
defect-qc/tests/: test_data.py  test_eval.py
finantial-rag-assistant/: .dockerignore  README.md  dockerfile  pyproject.toml  requirements.txt
finantial-rag-assistant/app/: streamlit_app.py
finantial-rag-assistant/src/financial_rag_assistant/: config.py  main.py
finantial-rag-assistant/src/financial_rag_assistant/ingestion/: embedder.py  pdf_loader.py  text_splitter.py
finantial-rag-assistant/src/financial_rag_assistant/llm/: generator.py
finantial-rag-assistant/src/financial_rag_assistant/pipeline/: rag_pipeline.py
finantial-rag-assistant/src/financial_rag_assistant/retrieval/: vector_store.py
pedestrian-box/: pyproject.toml
pedestrian-box/app/: streamlit_app.py
pedestrian-box/configs/: config.yaml
pedestrian-box/src/pedestrian_box/: data.py  data_analysis.ipynb  eval.py  inference.py  model.py  utils.py  visualize.py
pedestrian-box/src/pedestrian_box/app/: streamlit_app.py
pedestrian-box/tests/: test_data.py
titanic-survivors/: README.md  requirements.txt
titanic-survivors/configs/: config.yaml
titanic-survivors/src/: data.py  data_analysis.ipynb  model_analysis.ipynb  train.py
